docker-registry/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry-local
spec:
  hosts:
  - registry.vongjon.local
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: private-registry-docker-registry.docker-registry.svc.cluster.local
        port:
          number: 5000
